--- a/MyApplication1/app/src/main/res/values/strings.xml
+++ b/MyApplication1/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_detail">detail</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    //tabbed
+    <string name="tab_1">Tab_1</string>
+    <string name="tab_2">Tab_2</string>
+    <string name="tab_3">Tab_3</string>
 </resources>
