--- a/futsal/app/src/main/res/values/strings.xml
+++ b/futsal/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_navigasi">navigasi</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_home">Home</string>
 </resources>
